# vitocpp

./: .gitignore  BESt.md  CMakeLists.txt  README-icg.md  README.md  build-ubuntu18.04.sh
build-scripts/: build-ubuntu-18.04.sh  build-ubuntu-20.04.sh  setup-dependencies-ubuntu-18.04.sh  setup-dependencies-ubuntu-20.04.sh
cmake/: CMakeUtils.cmake  FindFFmpeg.cmake  FindLIVE555.cmake  FindLibConfig++.cmake  FindPYBIND11.cmake  FindmvIMPACT_acquire.cmake  Findnlohmannjson.cmake  Findpybind11.cmake  Findroyale.cmake  Findvcp.cmake  Findvitocpp.cmake  LocatePython.cmake
doc/: doxygen.cfg
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  best_demo.cpp  cairo_comparison.cpp  config_demo.cpp  imvis_demo.cpp  manual_alignment_demo.cpp  math_demo.cpp  ui_demo.cpp  utils_demo.cpp  visualization_demo.cpp
examples/data/: config.cfg
examples/data/best/: image_sequence.cfg  webcam.cfg
examples/data/data-best/: axis-http.cfg  axis-opencv.cfg  axis-rtsp.cfg  depth.cfg  image_sequence.cfg  ipcam.cfg  k4a-manual-alignment.cfg  k4a-zed-ip.cfg  k4a.cfg  kinects.cfg  mobotix.cfg  pmd.cfg  realsense.cfg  rgbds.cfg  test.cfg  video.cfg  webcam.cfg  zed.cfg
examples/python3/: best_demo.py  best_rgbd_alignment.py  best_streaming_demo.py  bgm_demo.py  config_demo.py  curl_test.py  geometry_demo.py  imutils_demo.py  imvis_demo.py  imvis_demo_rendering.py  math2d_demo.py  math3d_demo.py  math_demo.py  prepare_environment_py3.sh  rgbd_demo.py  streaming_icg.py  test_math.py  test_math2d.py  ui_demo.py  util_demo.py
examples/python3/tools/: calibrate-extrinsics.py  calibration_utils.py  cartoonify.py  perspective-plot-ui.py  plot-image-sequence.py  plot-image.py  utils_ext_calib.py  virtual-camera.py
scripts/: build-ubuntu-18.04.sh  setup-dependencies-ubuntu-18.04.sh
src/cpp/vcp_best/: CMakeLists.txt  calibration.cpp  calibration.h  capture.cpp  capture.h  common_types.cpp  common_types.h  curl_file_handling.cpp  curl_file_handling.h  file_sink.cpp  file_sink.h  http_mjpeg_sink.cpp  http_mjpeg_sink.h  ipcam_opencv.cpp  ipcam_opencv.h  ipcam_sink.cpp  ipcam_sink.h  k4a_sink.cpp  k4a_sink.h  liveview.cpp  liveview.h  pmd_sink.cpp  pmd_sink.h  realsense2_sink.cpp  realsense2_sink.h  rgbd.cpp  rgbd.h  rtsp_client.cpp  rtsp_client.h  rtsp_media_sink.cpp  rtsp_media_sink.h  rtsp_sink.cpp  rtsp_sink.h  sink.cpp  sink.h  sink_buffer.h  webcam_sink.cpp  webcam_sink.h  zed_sink.cpp  zed_sink.h
src/cpp/vcp_bgm/: CMakeLists.txt  approx_median_bgm.cpp  approx_median_bgm.h  background_model.h  blockbased_mean_bgm.cpp  blockbased_mean_bgm.h  mog_bgm.cpp  mog_bgm.h  normalized_rgb_bgm.cpp  normalized_rgb_bgm.h  vcp_bgm.h
src/cpp/vcp_config/: CMakeLists.txt  config_json.cpp  config_libconfig.cpp  config_params.h  vcp_config.h
src/cpp/vcp_imutils/: CMakeLists.txt  constants.h  constants_colornames.cpp  imabstraction.cpp  imabstraction.h  imutils.cpp  imutils.h  matutils.cpp  matutils.h  opencv_compatibility.h  vcp_imutils.h
src/cpp/vcp_imvis/: CMakeLists.txt  anaglyph.cpp  anaglyph.h  collage.cpp  collage.h  drawing.cpp  drawing.h  poses.cpp  poses.h  pseudocolor.cpp  pseudocolor.h  trajectories.cpp  trajectories.h  vcp_imvis.h
src/cpp/vcp_math/: CMakeLists.txt  common.cpp  common.h  common_test.cpp  conversions.h  geometry2d.cpp  geometry2d.h  geometry3d.cpp  geometry3d.h  math_test.cpp  vcp_math.h
src/cpp/vcp_ui/: CMakeLists.txt  point_selection.cpp  point_selection.h  rect_selection.cpp  rect_selection.h  vcp_ui.h
src/cpp/vcp_utils/: CMakeLists.txt  Findpvt_utils.cmake  circular_buffer.h  circular_buffer_test.cpp  enum_utils.h  file_utils.cpp  file_utils.h  math_utils.cpp  math_utils.h  math_utils_test.cpp  sort_utils.h  stop_watch.h  string_utils.cpp  string_utils.h  string_utils_test.cpp  test_utils.h  timing_utils.h  vcp_error.h  vcp_logging.h  vcp_utils.h  version.h
src/cpp/vcp_visualization/: CMakeLists.txt  anaglyph.cpp  anaglyph.h  collage.cpp  collage.h  drawing.cpp  drawing.h  pseudocolor.cpp  pseudocolor.h  trajectories.cpp  trajectories.h
src/python3/: CMakeLists.txt  requirements.txt  setup.py.in
src/python3/bindings/: best_cpp.cpp  bgm.cpp  config.cpp  config.h  imutils_cpp.cpp  imvis_cpp.cpp  math2d.cpp  math3d.cpp  ui_basics.cpp  utils.cpp
src/python3/bindings/conversion/: cv_core_conversion.cpp  cv_core_conversion.h  np_cv_conversion.cpp  np_cv_conversion.h  vcp_conversion.cpp  vcp_conversion.h
src/python3/examples/: cmake_uninstall.cmake
src/python3/vcp/: __init__.py  colormaps.py  imutils.py  imvis.py
src/python3/vcp/best/: __init__.py  frameset.py  storage.py  streaming.py
